Cambios menores más pequeña reestructuración de carpetas en referencia a validaciones